Closed Bug 1826067 Opened 2 years ago Closed 2 years ago

Fix non-unified-build bustage in parser/htmlparser/nsScanner.cpp

Categories

(Core :: XML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox111 --- unaffected
firefox112 --- unaffected
firefox113 --- fixed

People

(Reporter: janv, Assigned: janv)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

 0:05.56 parser/htmlparser
 0:06.27 /Users/jvarga/Projects/Mozilla15/src/parser/htmlparser/nsScanner.cpp:218:26: error: use of undeclared identifier 'kOutputFull'; did you mean 'mozilla::kOutputFull'?
 0:06.27     MOZ_ASSERT(result != kOutputFull);
 0:06.27                          ^~~~~~~~~~~
 0:06.27                          mozilla::kOutputFull
 0:06.27 /Users/jvarga/Projects/Mozilla15/obj-ff-nightly-debug-optimized-hybrid/dist/include/mozilla/Assertions.h:423:24: note: expanded from macro 'MOZ_ASSERT'
 0:06.27         ("MOZ_ASSERT", __VA_ARGS__))
 0:06.27                        ^
 0:06.27 /Users/jvarga/Projects/Mozilla15/obj-ff-nightly-debug-optimized-hybrid/dist/include/mozilla/Assertions.h:413:33: note: expanded from macro 'MOZ_ASSERT_GLUE'
 0:06.27 #define MOZ_ASSERT_GLUE(a, b) a b
 0:06.27                                 ^
 0:06.27 /Users/jvarga/Projects/Mozilla15/obj-ff-nightly-debug-optimized-hybrid/dist/include/mozilla/Assertions.h:392:40: note: expanded from macro 'MOZ_ASSERT_HELPER1'
 0:06.27     MOZ_VALIDATE_ASSERT_CONDITION_TYPE(expr);                  \
 0:06.27                                        ^
 0:06.27 /Users/jvarga/Projects/Mozilla15/obj-ff-nightly-debug-optimized-hybrid/dist/include/mozilla/Assertions.h:374:58: note: expanded from macro 'MOZ_VALIDATE_ASSERT_CONDITION_TYPE'
 0:06.27         mozilla::detail::AssertionConditionType<decltype(x)>::isValid, \
 0:06.27                                                          ^
 0:06.27 /Users/jvarga/Projects/Mozilla15/obj-ff-nightly-debug-optimized-hybrid/dist/include/mozilla/Encoding.h:96:16: note: 'mozilla::kOutputFull' declared here
 0:06.27 const uint32_t kOutputFull = OUTPUT_FULL;
 0:06.27                ^
 0:06.27 /Users/jvarga/Projects/Mozilla15/src/parser/htmlparser/nsScanner.cpp:218:26: error: use of undeclared identifier 'kOutputFull'; did you mean 'mozilla::kOutputFull'?
 0:06.27     MOZ_ASSERT(result != kOutputFull);
 0:06.27                          ^~~~~~~~~~~
 0:06.27                          mozilla::kOutputFull
 0:06.27 /Users/jvarga/Projects/Mozilla15/obj-ff-nightly-debug-optimized-hybrid/dist/include/mozilla/Assertions.h:423:24: note: expanded from macro 'MOZ_ASSERT'
 0:06.27         ("MOZ_ASSERT", __VA_ARGS__))
 0:06.27                        ^
 0:06.27 /Users/jvarga/Projects/Mozilla15/obj-ff-nightly-debug-optimized-hybrid/dist/include/mozilla/Assertions.h:413:33: note: expanded from macro 'MOZ_ASSERT_GLUE'
 0:06.27 #define MOZ_ASSERT_GLUE(a, b) a b
 0:06.27                                 ^
 0:06.27 /Users/jvarga/Projects/Mozilla15/obj-ff-nightly-debug-optimized-hybrid/dist/include/mozilla/Assertions.h:393:51: note: expanded from macro 'MOZ_ASSERT_HELPER1'
 0:06.27     if (MOZ_UNLIKELY(!MOZ_CHECK_ASSERT_ASSIGNMENT(expr))) {    \
 0:06.27                                                   ^
 0:06.27 /Users/jvarga/Projects/Mozilla15/obj-ff-nightly-debug-optimized-hybrid/dist/include/mozilla/StaticAnalysisFunctions.h:66:49: note: expanded from macro 'MOZ_CHECK_ASSERT_ASSIGNMENT'
 0:06.27 #  define MOZ_CHECK_ASSERT_ASSIGNMENT(expr) (!!(expr))
 0:06.27                                                 ^
 0:06.27 /Users/jvarga/Projects/Mozilla15/obj-ff-nightly-debug-optimized-hybrid/dist/include/mozilla/Likely.h:17:48: note: expanded from macro 'MOZ_UNLIKELY'
 0:06.27 #  define MOZ_UNLIKELY(x) (__builtin_expect(!!(x), 0))
 0:06.27                                                ^
 0:06.27 /Users/jvarga/Projects/Mozilla15/obj-ff-nightly-debug-optimized-hybrid/dist/include/mozilla/Encoding.h:96:16: note: 'mozilla::kOutputFull' declared here
 0:06.27 const uint32_t kOutputFull = OUTPUT_FULL;
 0:06.27                ^
 0:06.27 2 errors generated.
 0:06.27 make[4]: *** [nsScanner.o] Error 1
 0:06.27 make[3]: *** [parser/htmlparser/target-objects] Error 2
 0:06.27 make[2]: *** [compile] Error 2
 0:06.27 make[1]: *** [default] Error 2
 0:06.27 make: *** [build] Error 2
 0:06.27 966 compiler warnings present.

Set release status flags based on info from the regressing bug 1824516

Pushed by jvarga@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/20b6312ac93c Fix non-unified-build bustage in parser/htmlparser/nsScanner.cpp; r=sergesanspaille
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: