Bug 1826067 - Fix non-unified-build bustage in parser/htmlparser/nsScanner.cpp; r=sergesanspaille

Differential Revision: https://phabricator.services.mozilla.com/D174448